# LayerOcular

./: Cargo.toml  README.md
configuration/: base.yaml
src/: configuration.rs  main.rs  startup.rs
src/routes/: mod.rs
src/routes/home/: index.html  mod.rs
src/routes/v1/: authentication.rs  bank_connect.rs  chat.rs  mod.rs  transactions.rs
