[package]
name = "LayerOcular"
version = "0.1.0"
edition = "2024"
authors = ["Wilson Dagah"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.7.0"
secrecy = { version = "0.10.3", features = ["serde"] }
config = { version = "0.15.25", default-features = false, features = ["yaml"]}