[package]
name = "layer_ocular"
version = "0.1.0"
edition = "2024"
authors = ["Wilson Dagah"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.7.0"
secrecy = { version = "0.10.3", features = ["serde"] }
config = { version = "0.15.25", default-features = false, features = ["yaml"]}
actix-web = { version = "4.14.0", features = ["cookies", "secure-cookies"] }
anyhow = "1.0.103"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.22"
time = "=0.3.47"
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
